--- a/package.json
+++ b/package.json
@@ -8,24 +8,17 @@
   "bugs": "https://github.com/iam-medvedev/typebox-schema-faker/issues",
   "author": "Ilya Medvedev <ilya@medvedev.im>",
   "license": "MIT",
-  "main": "build/cjs.js",
-  "module": "build/esm.mjs",
-  "types": "build/src/index.d.ts",
   "files": [
-    "build/*",
+    "dist/*",
     "package.json"
   ],
   "exports": {
-    "import": {
-      "types": "./build/src/index.d.ts",
-      "default": "./build/esm.mjs"
-    },
-    "require": {
-      "types": "./build/src/index.d.ts",
-      "default": "./build/cjs.js"
-    }
+    "types": "./dist/index.d.ts",
+    "default": "./dist/index.js"
   },
   "scripts": {
+    "build": "rm -rf ./dist && NODE_ENV=production tsc --project tsconfig.dist.json",
+    "commit": "yarn git-cz",
     "prepare": "husky",
     "types": "tsc --noEmit"
   },
@@ -36,6 +29,8 @@
   "devDependencies": {
     "@sinclair/typebox": "^0.34.35",
     "@types/bun": "^1.2.16",
+    "cz-conventional-changelog": "^3.3.0",
+    "git-cz": "^4.9.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
